# ELIE

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
diagnosis_scripts/: README.rst  clustering_elbow_method.py  clustering_evaluation_metrics.py  find_distant_pairs.py  format_comparison_table.py  generate_distance_boxplot.py  merge_cluster_ids.py  validate_clusters_levenshtein.py
docs/: conf.py  index.rst  mfnb.rst  modules.rst
docs/doctrees/: elieclustering.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/: .buildinfo  elieclustering.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: elieclustering.rst.txt  index.rst.txt  modules.rst.txt
elieclustering/: date.py  geo.py  labeldata.py  name.py  utils.py
elieclustering/scripts/: make_collecting_events.py  make_collectordb.py  make_labels.py  match_collecting_events.py  search_labels.py  sort_labels.py  table_export.py
mfnb/: date.py  geo.py  labeldata.py  name.py  utils.py
mfnb/scripts/: checkout_collecting_events.py  make_collecting_events.py  make_collectordb.py  sort_labels.py  table_export.py
scripts/: checkout_collecting_events.py  make_collecting_events.py  make_collectordb.py  make_labels.py  match_collecting_events.py  search_labels.py  sort_labels.py  subset_db.py  table_export.py
