[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mfnb"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "mfnb"
version = "1.0a1"
authors = [
  { name="Joël Tuberosa", email="joel.tuberosa@unige.ch" },
  { name="Théo Léger", email="theo.leger@mfn.berlin" }
]
description = "A Python package from the Natural History Museum of Berlin for digitalized collecting event label classification."
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
  "nltk",
  "dateparser",
  "scikit-learn",
  "regex",
  "levenshtein",
  "scikit-learn-extra @ git+https://github.com/TimotheeMathieu/scikit-learn-extra@main#egg=scikit-learn-extra",
  "kneed",
  "geopy"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.scripts]
make_collecting_events     = "mfnb.scripts.make_collecting_events:main"
match_collecting_events    = "mfnb.scripts.match_collecting_events:main"
make_labels                = "mfnb.scripts.make_labels:main"
search_labels              = "mfnb.scripts.search_labels:main"
sort_labels                = "mfnb.scripts.sort_labels:main"
checkout_collecting_events = "mfnb.scripts.checkout_collecting_events:main"
subset_db                  = "mfnb.scripts.subset_db:main"
table_export               = "mfnb.scripts.table_export:main"
make_collectordb           = "mfnb.scripts.make_collectordb:main"
