[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elieclustering"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "elieclustering"
version = "1.0a1"
authors = [
  { name="Joël Tuberosa", email="joel.tuberosa@unige.ch" },
  { name="Théo Léger", email="theo.leger@mfn.berlin" }
]
description = "Entomological label clustering by text similarity."
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
  "nltk",
  "dateparser",
  "scikit-learn",
  "regex",
  "levenshtein",
  "scikit-learn-extra @ git+https://github.com/TimotheeMathieu/scikit-learn-extra@main#egg=scikit-learn-extra",
  "kneed",
  "geopy"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.scripts]
make_collecting_events     = "elieclustering.scripts.make_collecting_events:main"
match_collecting_events    = "elieclustering.scripts.match_collecting_events:main"
make_labels                = "elieclustering.scripts.make_labels:main"
search_labels              = "elieclustering.scripts.search_labels:main"
sort_labels                = "elieclustering.scripts.sort_labels:main"
checkout_collecting_events = "elieclustering.scripts.checkout_collecting_events:main"
subset_db                  = "elieclustering.scripts.subset_db:main"
table_export               = "elieclustering.scripts.table_export:main"
make_collectordb           = "elieclustering.scripts.make_collectordb:main"
